# ClickDV

./: .gitignore  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: README.md  twoarmedbandit_trainingrecordings.csv
notebooks/analysis/: 2025_03_10_PCA_trialavg.ipynb  2025_03_10_PCA_trialavg_v002.ipynb  claude_implementation_instructions.md  data_structure_implementation_plan.md  decision_variables_adrian_comparison.ipynb  decision_variables_extraction.ipynb  decision_variables_extraction_v002.ipynb  decision_variables_extraction_v003.ipynb  decision_variables_methodology.md  decision_variables_visualization.ipynb  dv_plan.md  dv_plan_section_5.md  gaussian_smoothing_explanation.md  glm_basis_functions_analysis.md  glm_click_spacing_analysis_v001.ipynb  glm_click_spacing_randomization_v001.ipynb  glm_clicks_recovery_demo_v001.ipynb  glm_clicks_to_dv_extensions.md  glm_clicks_to_dv_glmnet.ipynb  glm_clicks_to_dv_plan.md  glm_clicks_to_dv_sklearn_v002.ipynb  glm_clicks_to_dv_sklearn_v003.ipynb  plan_mode_violation_log.md  sklearn_vs_glmnet_comparison.md  uberphys_glm_comparison.md
src/: __init__.py
src/analysis/: __init__.py
src/models/: __init__.py
src/preprocessing/: __init__.py
src/utils/: __init__.py  binning.py  quality_filter.py
src/utils/matlab/: extract_source_data.m  test_extraction.m
src/utils/matlab_to_python/: examine_matlab_structure.py  extract_fields_with_regions.py  list_all_fields.py
src/visualization/: plot_dv_comparison.py
tests/: __init__.py  test_basic.py
